fixed the smtp notification
